--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -158,7 +158,10 @@
       {% endif %}
       {% if author.zhihu %}
       <li><a href="https://www.zhihu.com/people/{{ author.zhihu }}"><i class="fab fa-fw fa-zhihu icon-pad-right" aria-hidden="true"></i>Zhihu</a></li>
-      {% endif %}      
+      {% endif %}
+      {% if author.wechat %}
+      <li><a href="{{ author.wechat }}" target="_blank"><i class="fab fa-fw fa-weixin icon-pad-right" aria-hidden="true"></i>WeChat</a></li>
+      {% endif %}
     </ul>
   </div>
 </div>
