--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -160,7 +160,7 @@
       <li><a href="https://www.zhihu.com/people/{{ author.zhihu }}"><i class="fab fa-fw fa-zhihu icon-pad-right" aria-hidden="true"></i>Zhihu</a></li>
       {% endif %}
       {% if author.wechat %}
-      <li><a href="{{ author.wechat }}" target="_blank"><i class="fab fa-fw fa-weixin icon-pad-right" aria-hidden="true"></i>WeChat</a></li>
+      <li><a href="{{ author.wechat }}" target="_blank"><i class="fab fa-fw fa-weixin icon-pad-right" aria-hidden="true"></i>WeChat Blog</a></li>
       {% endif %}
     </ul>
   </div>
